Slider flash fix. Variables. Adaptive buuton scaling. Headers on small screens.

--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,6 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
-@import url("./all_unset.css");
+@import url("./all_unset.css"); /* Сброс стилей браузера */
+@import url("./settings.css"); /* Настройки проекта */
 
 
 
@@ -45,8 +33,10 @@ a {
   transition: 250ms;
 }
 
-a:hover {
-  transform: scale(1.1);
+@media (min-width: 768px) {
+  a:hover {
+    transform: scale(1.1);
+  }
 }
 
 .flex {
@@ -127,6 +117,7 @@ p {
 
 .input {
   all: unset;
+  box-sizing: border-box;
   width: 100%;
   cursor: text;
   padding: 12px 12px 12px 12px;
